--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ copy.src.on.open=false
 copy.src.target=
 index.file=src/index.php
 run.as=LOCAL
-url=http://localhost/myleads/
+url=http://localhost/leads/
